Descripción del cambio

--- a/.env
+++ b/.env
@@ -1,4 +1,12 @@
-DB_HOST = '54.172.4.108'
-DB_USER = 'apirest'
-DB_PASSWORD = 'abcd1234'
-DB_DATABASE = 'ecommerce'
+DB_HOST = '127.0.0.1'
+DB_USER = 'root'
+DB_PASSWORD = 'goku123'
+DB_DATABASE = 'Product'
+
+
+RABBITMQ_HOST='23.22.88.118'
+RABBITMQ_USER='guest'
+RABBITMQ_PASSWORD='guest'
+RABBITMQ_EXCHANGE='amq.topic'
+RABBITMQ_QUEUE='mqtt'
+RABBITMQ_ROUTING_KEY='esp32.mqtt'
