--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Skeleton for new typescript services based on hexagonal architecture",
   "main": "src/server.js",
   "scripts": {
-    "start": "node dist/src/main.js",
+    "start": "node dist/src/server.js",
     "start:dev": "tsnd --respawn src/server.ts",
     "test": "npm run test:unit",
-    "test:unit": "NODE_ENV=test jest --coverage",
+    "test:unit": "cross-env NODE_ENV=test jest --coverage",
     "prepare": "husky install",
     "lint": "eslint --ignore-path .gitignore . --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
@@ -39,10 +39,13 @@
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@types/amqplib": "^0.10.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
+    "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -65,10 +68,17 @@
   "dependencies": {
     "@types/signale": "^1.4.4",
     "amqplib": "^0.10.3",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.2.4",
-    "signale": "^1.4.0"
+    "signale": "^1.4.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "ws": "^8.18.0"
   }
 }
